--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ addons:
     project:
       name: "OpenGrok/OpenGrok"
       description: "Build submitted via Travis CI"
-     branch_pattern: coverity_scan 
+      branch_pattern: "coverity_scan"
       #    build_command_prepend: "mvn clean"
     build_command:   "mvn -DskipTests=true -Dmaven.javadoc.skip=false -B -V compile"
