adding a license template for nb

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,6 +11,7 @@ build.sysclasspath=ignore
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
 manifest.custom.caller.allowable.codebase=
+project.licensePath=./nbproject/licenseheader.txt
 src.generatedsrc.dir=generatedsrc
 file.reference.lucene-core.jar=lib/${lucene-core.jar}
 dist.war=${dist.dir}/source.war
