--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 file.reference.bcel-6.0.jar=lib/bcel-6.0.jar
 javac.external.vm=false
+javadoc.reference.lucene-queryparser.jar=C:\\Programming\\lucene-6.5.0\\docs\\queryparser
 #Fri Nov 06 11:03:18 CET 2015
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -20,7 +21,7 @@ build.generated.dir=${build.dir}/generated
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-lucene.version=6.5.0
+lucene.version=6.5.1
 lucene-core.jar=lucene-core-${lucene.version}.jar
 file.reference.opengrok-dev-test=test
 debug.test.classpath=${run.test.classpath}
