--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,11 @@ env:
    #   via the "travis encrypt" command using the project repo's public key
    - secure: "O_cda5pWDBAP-O3_0nG5RQ"
 
+script:     "mvn -DskipTests=true -Dmaven.javadoc.skip=false -B -V compile && cd opengrok-indexer && mvn javadoc:javadoc && cd ../opengrok-web && mvn javadoc:javadoc"
+
 addons:
   coverity_scan:
     project:
       name: "OpenGrok/OpenGrok"
       description: "Build submitted via Travis CI"
       branch_pattern: "coverity_scan"
-      #    build_command_prepend: "mvn clean"
-      build_command:   "mvn -DskipTests=true -Dmaven.javadoc.skip=false -B -V compile && cd opengrok-indexer && mvn javadoc:javadoc && cd ../opengrok-web && mvn javadoc:javadoc"
