--- a/build.xml
+++ b/build.xml
@@ -109,7 +109,7 @@ Copyright (c) 2005, 2017, Oracle and/or its affiliates. All rights reserved.
     <property name="test.cvs.root" value="${test.cvs}/cvsroot"/>
     <property name="test.hg" value="${test.repositories}/mercurial"/>
     <property name="test.bk" value="${test.repositories}/bitkeeper"/>
-    <property name="test.bzr" value="${test.repositories}/bzr"/>
+    <property name="test.bzr" value="${test.repositories}/bazaar"/>
     <property name="test.git" value="${test.repositories}/git"/>
     <property name="test.svn" value="${test.repositories}/svn"/>
     <property name="test.razor" value="${test.repositories}/razor"/>
