--- a/opengrok-indexer/build.xml
+++ b/opengrok-indexer/build.xml
@@ -35,7 +35,7 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
     <property name="test.cvs.repo" value="${test.cvs}/cvsrepo"/>
     <property name="test.cvs.root" value="${test.cvs}/cvsroot"/>
     <property name="test.bk" value="${test.repositories}/bitkeeper"/>
-    <property name="test.bzr" value="${test.repositories}/bzr"/>
+    <property name="test.bzr" value="${test.repositories}/bazaar"/>
     <property name="test.hg" value="${test.repositories}/mercurial"/>
     <property name="test.git" value="${test.repositories}/git"/>
     <property name="test.svn" value="${test.repositories}/svn"/>
