--- a/opengrok-indexer/build.xml
+++ b/opengrok-indexer/build.xml
@@ -35,6 +35,7 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
     <property name="test.cvs.repo" value="${test.cvs}/cvsrepo"/>
     <property name="test.cvs.root" value="${test.cvs}/cvsroot"/>
     <property name="test.bk" value="${test.repositories}/bitkeeper"/>
+    <property name="test.bzr" value="${test.repositories}/bazaar"/>
     <property name="test.hg" value="${test.repositories}/mercurial"/>
     <property name="test.git" value="${test.repositories}/git"/>
     <property name="test.svn" value="${test.repositories}/svn"/>
@@ -128,13 +129,18 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
             <fileset dir="${test.bk}/bk" defaultexcludes="no"/>
         </copy>
 
+	<!-- Generate ZIP files used for unit testing bzr/.bzr are renamed -->
+        <copy todir="${test.bzr}/.bzr">
+            <fileset dir="${test.bzr}/bzr"/>
+        </copy>
+
         <zip destfile="${build.test.classes.dir}/org/opensolaris/opengrok/index/source.zip"
               basedir="${test.sources}"
               update="false"
               defaultexcludes="no"/>
         <zip destfile="${build.test.classes.dir}/org/opensolaris/opengrok/history/repositories.zip"
                 basedir="${test.repositories}"
-                excludes="mercurial/hg/**, mercurial/hgignore, git/git/**, bitkeeper/bk/**"
+                excludes="mercurial/hg/**, mercurial/hgignore, git/git/**, bitkeeper/bk/**, bazaar/bzr/**"
                 update="false"
                 defaultexcludes="no"/>
 
@@ -197,6 +203,7 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
     <!-- clean up generated test repositories -->
     <target name="-delete-generated-repository-files">
       <delete dir="${test.bk}/.bk"/>
+      <delete dir="${test.bzr}/.bzr"/>
       <delete dir="${test.hg}/.hg"/>
       <delete file="${test.hg}/.hgignore"/>
       <delete dir="${test.git}/.git"/>
