--- a/build.xml
+++ b/build.xml
@@ -560,7 +560,7 @@ Copyright (c) 2005, 2017, Oracle and/or its affiliates. All rights reserved.
             <arg value="-o${dist.dir}/${distname}-${version}-src.zip"/>
             <arg value="${version}"/>
         </exec>
-        <echo message="If above suceeds, output is in ${dist.dir}/${distname}-${version}-src.zip"/>
+        <echo message="If above succeeds, output is in ${dist.dir}/${distname}-${version}-src.zip"/>
     </target>
 
     <target name="-check_findbugs" description="Check that findbugs jar files are present">
