Update test to allow for having set org.opensolaris.opengrok.analysis.Ctags
Also:
- git-ignore any user's NetBeans project configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *~
 nbproject/*~
+/nbproject/configs/*.properties
 opengrok-web-nbproject/nbproject/*~
 opengrok-web-nbproject/nbproject/build-impl.xml~
 tags
