--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -19,6 +19,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 CDDL HEADER END
 
 Copyright (c) 2010, 2017, Oracle and/or its affiliates. All rights reserved.
+Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -76,6 +77,13 @@ Copyright (c) 2010, 2017, Oracle and/or its affiliates. All rights reserved.
             <testResource>
                 <targetPath>org/opensolaris/opengrok/history/</targetPath>
                 <directory>../test/org/opensolaris/opengrok/history/</directory>
+                <excludes>
+                    <exclude>*.java</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
+                <targetPath>org/opensolaris/opengrok/analysis/perl/</targetPath>
+                <directory>../test/org/opensolaris/opengrok/analysis/perl/</directory>
                 <excludes>
                     <exclude>*.java</exclude>
                 </excludes>
