Added XML  man page generator plus ...
... test code for options without descriptions (not yet activated because it requires new Indexer.java)
for issue #1503

--- a/build.xml
+++ b/build.xml
@@ -513,8 +513,9 @@ Copyright (c) 2005, 2017, Oracle and/or its affiliates. All rights reserved.
             <lib dir="${dist.dir}/lib" includes="*.jar" excludes="${servlet-api.jar}"/>
         </war>
         <echo message="Generating man page.."/>
-        <java classname="org.opensolaris.opengrok.index.CommandLineOptions"
+        <java classname="org.opensolaris.opengrok.index.Indexer"
               output="${dist.dir}/opengrok.1" failonerror="true" fork="true">
+            <arg value="--man" />
             <classpath>
                 <pathelement location="dist/opengrok.jar"/>
                 <pathelement path="${java.class.path}"/>
