backing out mistaken promotion
#1503

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,7 @@ build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
 javac.source=1.8
-run.jvmargs=-ea -enableassertions:org.opensolaris.opengrok... -Dorg.opensolaris.opengrok.analysis.Ctags=C:/Users/shaehn/Downloads/ctags-2017-08-10_7fcdea3f-x64/ctags.exe
+run.jvmargs=-ea -enableassertions:org.opensolaris.opengrok...
 manifest.custom.permissions=
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
 run.test.classpath=\
