Drop static writeXref()s; use existing thread-cached analyzers instead
Also:
- Move "<pre>"-manipulation and div#man writing into
  TroffXref so TroffAnalyzer doesn't have to know HTML
  formatting details.
- Do not force scopesEnabled,foldingEnabled to true for
  PowershellAnalyzer.
- Refactor (non-static) writeXref() to use new
  WriteXrefArgs class.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *~
-nbproject/*~
+*.swp
 /nbproject/configs/*.properties
-opengrok-web-nbproject/nbproject/*~
-opengrok-web-nbproject/nbproject/build-impl.xml~
 tags
 TAGS
 build
@@ -39,8 +37,6 @@ webrev
 opengrok-web-nbproject/nbproject/private/
 opengrok-web-nbproject/nbproject/genfiles.properties
 run_my.bat
-*.xml~
-opengrok-web-nbproject/nbproject/build-impl.xml~
 build.bat
 jacoco
 jacoco.exec
