--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,17 +48,19 @@
         </init-param>
     </filter>
     <filter-mapping>
+        <filter-name>ExpiresOneDayFilter</filter-name>
+        <url-pattern>/default/*</url-pattern>
+        <url-pattern>/js/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+    <filter-mapping>
+        <!-- Place this mapping last, so /* wildcard is only a fallback -->
         <filter-name>ExpiresHalfHourFilter</filter-name>
+        <url-pattern>/*</url-pattern>
         <url-pattern>/download/*</url-pattern>
         <url-pattern>/history/*</url-pattern>
         <url-pattern>/xref/*</url-pattern>
         <url-pattern>/raw/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>ExpiresOneDayFilter</filter-name>
-        <url-pattern>/default/*</url-pattern>
-        <url-pattern>/js/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <servlet>
