--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -42,6 +42,11 @@ Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
             <artifactId>opengrok-indexer</artifactId>
             <version>${project.version}</version>
         </dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	</dependency>
     </dependencies>
 
 </project>
