--- a/build.xml
+++ b/build.xml
@@ -777,6 +777,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
             <formatter type="html" toFile="pmd/pmd_report.html"/>
             <formatter type="xml" toFile="pmd/pmd_report.xml"/>
             <fileset dir="src" includes="**/*.java"/>
+            <fileset dir="plugins" includes="**/*.java"/>
             <!--            <fileset dir="test" includes="**/*.java"/> -->
             <!--            <fileset dir="web" includes="**/*.jsp"/>
             <fileset dir="web" includes="**/*.jspf"/> -->
